feat: adicionando documentação da criação de especialidade
